--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 type: 'multiple_choice',
                 // FIX: Replaced smart quotes “D:Stack” with standard quotes "D:Stack"
                 options: ["A. Cave ->Crack- Arch -> Stack -> Stump", "B. Crack- Stack -> Arch -> Cave -> Stump", "C. Crack-Arch -> Stump -> Stack -> Cave", "D. Crack- Cave -> Stack -> Arch -> Stump"],
-                answer: "A. Cave ->Crack- Arch -> Stack -> Stump"
+                answer: "D. Crack- Cave -> Stack -> Arch -> Stump"
             },
             {
                 question: "In what type of coastal erosion do rocks hit the cliff",
